welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: ':' expected but ')' found.
def hunt(couleur) {
                ^SlugSnail:42: error: identifier expected but '}' found.
}
^